milestone-2/k8s/backend-delp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask
  name: web-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  strategy: {}
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: web-flask:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
status: {}
