milestone-2/k8s/redis-delp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
    tier: backend
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      tier: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: redis
        tier: backend
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
status: {}
