milestone-2/k8s/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask
  name: web-flask
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: flask
