milestone-2/k8s/frontend-delp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2-frontend
  labels:
    app: p2-frontend
spec:
  selector:
    matchLabels:
      app: p2-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: p2-frontend
    spec:
      containers:
        - image: web-app:v1
          imagePullPolicy: Never
          name: p2-frontend
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: p2-frontend
  labels:
    app: p2-frontend
spec:
  selector:
    app: p2-frontend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
