milestone-2/k8s/minio-svc.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: minio-service
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 9000
#       targetPort: 9000
#       protocol: TCP
#   selector:
#     app: minio
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
