milestone-2/k8s/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    tier: backend
  name: redis
spec:
  # type: LoadBalancer
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
    tier: backend
