milestone-2/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2-ingress
spec:
  rules:
    - host: p2.com
    - http:
        paths:
          - path: "/redis"
            pathType: Prefix
            backend:
              service:
                name: redis
                port:
                  number: 6379
          - path: "/web"
            pathType: Prefix
            backend:
              service:
                name: web-flask
                port:
                  number: 8080
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9000
          # - path: "/"
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: p2-frontend
          #       port:
          #         number: 80
